--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -1,10 +1,10 @@
-name: Build & Test React Application
+name: DockerHub - Oracle
 
 on:
   push:
-    branches: ["frontend"]
+    branches: ["backend"]
   pull_request:
-    branches: ["frontend"]
+    branches: ["backend"]
 
 env:
   REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
@@ -36,12 +36,7 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
-
-      - name: Build React Project
-        run: npm run build --if-present
-        env:
-          CI: false
-
+        
       - name: Save Version
         id: version
         run: echo ::set-output name=tag
@@ -61,7 +56,7 @@ jobs:
           push: true
           context: .
           file: Dockerfile.prod
-          tags: stephenphyo/web-010-phoenix-shop-frontend:latest
+          tags: stephenphyo/web-010-phoenix-shop-backend:latest
 
   deploy:
     name: Deploy to Production Environment
